--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -5,6 +5,6 @@
 }
 
 <div class="jumbotron">
-    <h1>produkcja</h1>
+    <h1>srodowisko produkcyjne</h1>
     <p class="lead">Example .NET app to Azure App Service.</p>
 </div>
